@@ -1,6 +1,7 @@
 * fix problem that attributes set in [traccar_zones] metadata section are not respected
 * HQ:main screen - use full width of the browser window
 * check_location: return error when zone have neither key nor message defined
+* Improve LOCATION_CHECK events
 
 rel 20.4.0
 * fix rank table is generation (#25)
